--- a/src/app/components/slides/slides.component.scss
+++ b/src/app/components/slides/slides.component.scss
@@ -9,3 +9,27 @@ ion-slide {
         font-weight: bold;
     }
 }
+
+/* add start */
+
+ion-slides {
+    /*--bullet-background: green;*/
+    --bullet-background-active: #009444;
+}
+
+.swiper-pagination {
+    bottom: 3px !important;    
+}
+
+/* didn't work
+.swiper-pagination-bullet {
+  background: green;
+  opacity: 0.2;
+}
+
+.swiper-pagination-bullet-active {
+  opacity: 0.9;
+  background: green;
+} */
+
+/* add end */
