--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -2,12 +2,12 @@
   <ion-grid>
     <ion-row>
       <ion-col size-md="4" offset-md="4">
-          <ion-card>
-              <ion-card-content paddung="true">  
+        <!-- <div style="height: 100%; display: flex; align-items: center; justify-content: center;"> -->
+          <ion-card mode="ios">
+              <ion-card-content padding="true">  
                 <div class="center">
                   <app-logo></app-logo>
-                  <h1>Doctor's Portal - Login</h1>
-                  
+                  <h1>Hello, Doc!</h1>
                 </div>
                   <ion-item>
                       <ion-label position="floating">Username</ion-label>
@@ -37,18 +37,19 @@
                     </ion-radio-group-->
                   </ion-list>
                   <div class="ion-margin-vertical ion-text-right">
-                      <ion-button id="btn-confirm" (click)="loginAction() " color="mango">
+                      <ion-button expand="block" id="btn-confirm" (click)="loginAction() " color="mango">
                         Login
                       </ion-button>
                   </div>
               </ion-card-content>
           </ion-card>
+        <!-- </div> -->
       </ion-col>
   </ion-row>
   </ion-grid>
 </ion-content>
 <ion-footer class="ion-no-border">
   <ion-toolbar>
-    <p>v0.0.1</p>
+    <p> v0.6.1</p>
   </ion-toolbar>
 </ion-footer>
