--- a/src/global.scss
+++ b/src/global.scss
@@ -24,6 +24,9 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
 /*
 .my-custom-modal-css .modal-wrapper {
     height: 30%;
