--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -100,7 +100,7 @@
                 </ion-item>
 
                 <ion-item lines="none">
-                  <p>For inquiries, please contact Chong Hua Hospital IT Department (<b><a href="tel: +63322558000">+63 32 255 8000</a></b>).</p>
+                  <p>For inquiries, please contact Systems Solution & Business Intelligence Team of Chong Hua Hospital IT Division (<b><a href="tel: +63322558000">+63 32 255 8000</a></b>).</p>
                 </ion-item>
               </ion-list>
             </ion-card-content>
