--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -322,7 +322,7 @@
                   >
                     <ion-skeleton-text
                       animated
-                      style="width: 100%; height: 30px;"
+                      style="width: 100%;"
                     ></ion-skeleton-text>
                   </ion-item>
                   <ion-skeleton-text
