--- a/src/app/components/inpatientmodal/inpatientmodal.page.html
+++ b/src/app/components/inpatientmodal/inpatientmodal.page.html
@@ -212,19 +212,83 @@
         <b>Doctors</b><br />
       </div>
     </ion-item>
-    <ion-item lines="none" *ngFor="let dr of coDoctors">
-      <ion-avatar slot="start">
-        <text-avatar [text]="dr.last_name" [color]=""></text-avatar>
-      </ion-avatar>
-      <ion-label style="margin-top:-10px">
-        <ion-item class="ion-no-padding" style="padding-bottom:5px">
-          <h3 class="ion-text-wrap" style="padding-top:20px">Dr. {{dr.first_name}} {{dr.last_name}}</h3>
+    <ng-container>
+      <ion-item lines="none" *ngFor="let dr of coDoctors">
+        <ion-avatar slot="start">
+          <text-avatar [text]="dr.last_name" [color]=""></text-avatar>
+        </ion-avatar>
+        <ion-label style="margin-top:-10px">
+          <ion-item class="ion-no-padding" style="padding-bottom:5px">
+            <h3 class="ion-text-wrap" style="padding-top:20px">Dr. {{dr.first_name}} {{dr.last_name}}</h3>
+          </ion-item>
+          <ion-badge
+          color="medium" >
+          {{dr.status}}</ion-badge>
+          </ion-label>
+      </ion-item>
+    </ng-container>
+
+    <ng-container>
+      <div
+        *ngIf="!objecthandler && !isFetchDone else noDataAvailable"
+        class="ion-padding custom-skeleton"
+      >
+      <!-- Skeleton  -->
+        <ion-item>
+          <ion-avatar slot="start">
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </ion-avatar>
+          <ion-label style="margin-top:-10px">
+            <ion-item class="ion-no-padding" style="padding-bottom:5px">
+              <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-item>
+            <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-label>
         </ion-item>
-        <ion-badge
-        color="medium" >
-        {{dr.status}}</ion-badge>
-        </ion-label>
-    </ion-item>
+        <ion-item>
+          <ion-avatar slot="start">
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </ion-avatar>
+          <ion-label style="margin-top:-10px">
+            <ion-item class="ion-no-padding" style="padding-bottom:5px">
+              <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-item>
+            <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-avatar slot="start">
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </ion-avatar>
+          <ion-label style="margin-top:-10px">
+            <ion-item class="ion-no-padding" style="padding-bottom:5px">
+              <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-item>
+            <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-avatar slot="start">
+            <ion-skeleton-text animated></ion-skeleton-text>
+          </ion-avatar>
+          <ion-label style="margin-top:-10px">
+            <ion-item class="ion-no-padding" style="padding-bottom:5px">
+              <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-item>
+            <ion-skeleton-text animated></ion-skeleton-text>
+            </ion-label>
+        </ion-item>
+      </div>
+    </ng-container>
+
+    <ng-template #noDataAvailable>
+      <div *ngIf="!objecthandler && isFetchDone">
+        <ion-list-header slot="center" mode="ios">
+          Cannot retrieve list of Doctors at this time. Please retry.
+        </ion-list-header>
+      </div>
+    </ng-template>
+    
 
 
 
