--- a/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
+++ b/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
@@ -1,113 +1,157 @@
-
 <ion-header mode="md" class="ion-no-border">
-  <ion-toolbar class="in-toolbar ios toolbar-title-default hydrated" color="mango">
-    <ion-title>
-      <ion-icon name="add"></ion-icon>Add Appointments
-    </ion-title>
+  <ion-toolbar
+    class="in-toolbar ios toolbar-title-default hydrated"
+    color="mango"
+  >
+    <ion-title> <ion-icon name="add"></ion-icon>Add Appointments </ion-title>
     <!--ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
       <ion-button (click)="closeModal()" routerDirection="back" class="ios button button-clear ion-activatable ion-focusable hydrated">Close</ion-button>
     </ion-buttons-->
-    <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated" >
-      <ion-button (click)="closeModal()" color="chh-css-primary2">Close&nbsp; <ion-icon name="close-outline"></ion-icon></ion-button>
+    <ion-buttons
+      slot="end"
+      class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
+    >
+      <ion-button (click)="closeModal()" color="chh-css-primary2"
+        >Close&nbsp; <ion-icon name="close-outline"></ion-icon
+      ></ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
+<ion-content>
+  <ion-grid class="my-backbround ion-no-padding">
+    <ion-row>
+      <ion-col>
+        <ion-card mode="ios">
+          <ion-card-content>
+            <ion-item class="ion-no-padding">
+              <ion-label position="floating">Chong Hua Hospital</ion-label>
+              <ion-select
+                [(ngModel)]="location"
+                okText="Ok"
+                cancelText="Cancel"
+                (ionChange)="pickLocation()"
+              >
+                <ion-select-option value="C" class="ion-text-wrap"
+                  >Cebu</ion-select-option
+                >
+                <ion-select-option value="M" class="ion-text-wrap"
+                  >Mandaue</ion-select-option
+                >
+              </ion-select>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
 
-  <ion-content >
-    <ion-grid class="my-backbround ion-no-padding">
-      <ion-row>
-        <ion-col >
+        <ion-card mode="ios">
+          <ion-card-content>
+            <ion-item class="ion-no-padding">
+              <ion-label
+                position="fixed"
+                style="z-index: 10;"
+                (click)="openDatePickerForDateOfAppointment()"
+                >Date</ion-label
+              >
+              <ion-input
+                readonly
+                [(ngModel)]="mydate1"
+                value="{{mydate1}}"
+                (click)="openDatePickerForDateOfAppointment()"
+              ></ion-input>
+            </ion-item>
+            <ion-item class="ion-no-padding">
+              <ion-label position="floating">Time</ion-label>
+              <ion-select
+                [(ngModel)]="time"
+                okText="Ok"
+                cancelText="Cancel"
+                (ionChange)="uxTime()"
+              >
+                <div *ngFor="let x of doctorSchedule">
+                  <ion-select-option
+                    value="{{x.time_in}} - {{x.time_out}}|{{x.slot}}"
+                    >{{x.time_in}} - {{x.time_out}}</ion-select-option
+                  >
+                </div>
+              </ion-select>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
 
-
-
-
-
-
-
-
-
-
-  <ion-card>
-    <ion-card-content>
-      
-      <ion-item class="ion-no-padding">
-        <ion-label position="floating">Chong Hua Hospital</ion-label>
-        <ion-select  [(ngModel)]="location"  okText="Ok" cancelText="Cancel" (ionChange)="pickLocation()">
-        <ion-select-option value = "C" class="ion-text-wrap" >Cebu</ion-select-option>
-        <ion-select-option value = "M" class="ion-text-wrap" >Mandaue</ion-select-option>
-        </ion-select>
-      </ion-item>
-    </ion-card-content>
-  </ion-card>
-
-
-    <ion-card>
-      <ion-card-content>     
-        <ion-item class="ion-no-padding" >
-        <ion-label position="fixed" style="z-index:10" (click)="openDatePickerForDateOfAppointment()">Date</ion-label>
-        <ion-input readonly [(ngModel)]="mydate1" value="{{mydate1}}" (click)="openDatePickerForDateOfAppointment()"></ion-input>
-        </ion-item>
-        <ion-item class="ion-no-padding">
-        <ion-label position="floating">Time</ion-label>
-        <ion-select  [(ngModel)]="time" okText="Ok" cancelText="Cancel" (ionChange)="uxTime()">
-        <div *ngFor="let x of doctorSchedule" >
-        <ion-select-option value="{{x.time_in}} - {{x.time_out}}|{{x.slot}}">{{x.time_in}} - {{x.time_out}}</ion-select-option>
-        </div>
-        </ion-select>
-        </ion-item>
-      </ion-card-content>
-    </ion-card>
-
-    <ion-card disabled="{{uxUserInfo}}">
-      <ion-card-content> 
-      <ion-item  class="ion-no-padding">
-        <ion-label position="floating">First Name</ion-label>
-        <ion-input (ionChange)="userInfo()" [(ngModel)]="fname" id="input-remarks"></ion-input>
-      </ion-item>
-      <ion-item  class="ion-no-padding">
-        <ion-label position="floating">Middle Name</ion-label>
-        <ion-input (ionChange)="userInfo()" [(ngModel)]="mname" id="input-remarks"></ion-input>
-      </ion-item>
-      <ion-item  class="ion-no-padding">
-        <ion-label position="floating">Last Name</ion-label>
-        <ion-input (ionChange)="userInfo()" [(ngModel)]="lname" id="input-remarks"></ion-input>
-      </ion-item>
-      <ion-item class="ion-no-padding">
-        <!--ion-label position="fixed"  style="z-index:10">Birthdate</ion-label>
+        <ion-card disabled="{{uxUserInfo}}" mode="ios">
+          <ion-card-content>
+            <ion-item class="ion-no-padding">
+              <ion-label position="floating">First Name</ion-label>
+              <ion-input
+                (ionChange)="userInfo()"
+                [(ngModel)]="fname"
+                id="input-remarks"
+              ></ion-input>
+            </ion-item>
+            <ion-item class="ion-no-padding">
+              <ion-label position="floating">Middle Name</ion-label>
+              <ion-input
+                (ionChange)="userInfo()"
+                [(ngModel)]="mname"
+                id="input-remarks"
+              ></ion-input>
+            </ion-item>
+            <ion-item class="ion-no-padding">
+              <ion-label position="floating">Last Name</ion-label>
+              <ion-input
+                (ionChange)="userInfo()"
+                [(ngModel)]="lname"
+                id="input-remarks"
+              ></ion-input>
+            </ion-item>
+            <ion-item class="ion-no-padding">
+              <!--ion-label position="fixed"  style="z-index:10">Birthdate</ion-label>
         <li-ionic4-datepicker [(ngModel)]="mydate2" [inputDateConfig]="datePickerObj2" ></li-ionic4-datepicker-->
-        <ion-item class="ion-no-padding" >
-          <ion-label position="fixed" style="z-index:10" (click)="openDatePickerForBirthdate()">Birthdate</ion-label>
-          <ion-input readonly [(ngModel)]="mydate2" value="{{mydate2}}" (click)="openDatePickerForBirthdate()"></ion-input>
-          </ion-item>
+              <ion-item class="ion-no-padding">
+                <ion-label
+                  position="fixed"
+                  style="z-index: 10;"
+                  (click)="openDatePickerForBirthdate()"
+                  >Birthdate</ion-label
+                >
+                <ion-input
+                  readonly
+                  [(ngModel)]="mydate2"
+                  value="{{mydate2}}"
+                  (click)="openDatePickerForBirthdate()"
+                ></ion-input>
+              </ion-item>
+            </ion-item>
+            <ion-item class="ion-no-padding">
+              <ion-label position="floating">Gender</ion-label>
+              <ion-select
+                placeholder="Select"
+                (ionChange)="userInfo()"
+                [(ngModel)]="gender"
+              >
+                <ion-select-option value="f">Female</ion-select-option>
+                <ion-select-option value="m">Male</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
 
-
-      </ion-item>
-      <ion-item class="ion-no-padding">
-        <ion-label position="floating">Gender</ion-label>
-        <ion-select placeholder="Select" (ionChange)="userInfo()"  [(ngModel)]="gender">
-          <ion-select-option value="f">Female</ion-select-option>
-          <ion-select-option value="m">Male</ion-select-option>
-        </ion-select>
-      </ion-item>
-</ion-card-content> 
-    </ion-card>
-
-      <ion-card disabled="{{uxEndpart}}">
-        <ion-card-content> 
-      <ion-item class="ion-no-padding">
-      <ion-label position="floating">Address</ion-label>
-      <ion-textarea id="input-remarks" (ionChange)="address()"  [(ngModel)]="adrress"></ion-textarea>
-      </ion-item>
-      <ion-item class="ion-no-padding">
-      <ion-label position="floating">Contact Number</ion-label>
-      <ion-input id="input-remarks"  [(ngModel)]="contact"></ion-input>
-      </ion-item>
-  
-
-
-    </ion-card-content>
-    <!--ion-item disabled="{{uxSaveCancel}}">
+        <ion-card disabled="{{uxEndpart}}" mode="ios">
+          <ion-card-content>
+            <ion-item class="ion-no-padding">
+              <ion-label position="floating">Address</ion-label>
+              <ion-textarea
+                id="input-remarks"
+                (ionChange)="address()"
+                [(ngModel)]="adrress"
+              ></ion-textarea>
+            </ion-item>
+            <ion-item class="ion-no-padding">
+              <ion-label position="floating">Contact Number</ion-label>
+              <ion-input id="input-remarks" [(ngModel)]="contact"></ion-input>
+            </ion-item>
+          </ion-card-content>
+          <!--ion-item disabled="{{uxSaveCancel}}">
       <ion-button  slot="end" expand="block" id="btn-confirm" (click)="save()" color="mango">
         Save
       </ion-button>
@@ -115,43 +159,35 @@
         Cancel
       </ion-button>
     </ion-item-->
-    <ion-grid >
-      <ion-row >
-        <ion-col size-xs="6" >
-          <ion-button expand="block"shape="round"  id="btn-confirm" (click)="save()" color="mango" disabled="{{uxSaveCancel}}">
-            Save
-          </ion-button>
-        </ion-col>
-        <ion-col size-xs="6" >
-          <ion-button expand="block" shape="round"  id="btn-confirm" (click)="closeModal()" color="danger">
-            Cancel
-          </ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-card>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-          
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ion-content>
+          <ion-grid>
+            <ion-row>
+              <ion-col size-xs="6">
+                <ion-button
+                  expand="block"
+                  shape="round"
+                  id="btn-confirm"
+                  (click)="save()"
+                  color="mango"
+                  disabled="{{uxSaveCancel}}"
+                >
+                  Save
+                </ion-button>
+              </ion-col>
+              <ion-col size-xs="6">
+                <ion-button
+                  expand="block"
+                  shape="round"
+                  id="btn-confirm"
+                  (click)="closeModal()"
+                  color="danger"
+                >
+                  Cancel
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
