--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee-summary/chh-app-professional-fee-summary.page.html
@@ -108,17 +108,17 @@
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Only the excess amount of P<b>{{InsurancePF | number}}</b> (+ VAT) - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
+          >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> (+ VAT) - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: Insurance (HMO) + PhilHealth + ~P(excess amount)(+ VAT)</ion-text
+          >Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess amount)(+ VAT)</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Please note that actual receivable amount may vary after final computations from accounting.</ion-text
+          >Please note that actual receivable amount may vary after final computations from Accounting.</ion-text
         >
       </li>
     </ul>
@@ -131,17 +131,17 @@
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Only the excess amount of P<b>{{InsurancePF | number}}</b> - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
+          >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: Insurance (HMO) + PhilHealth + ~P(excess amount)
+          >Receivables: Insurance (HMO) + PhilHealth + ~&#8369;(excess amount)
         </ion-text>
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Please note that actual receivable amount may vary after final computations from accounting.
+          >Please note that actual receivable amount may vary after final computations from Accounting.
         </ion-text>
       </li>
     </ul>
@@ -380,7 +380,7 @@ ______                         ______   _   _   _____   _____
     <ul *ngIf="!txtPersonalPhilHealthPF && txtPersonalPhilHealthVAT">
       <li class="lineheight-80">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Total amount of P<b>{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient NOT including PhilHealth rate.</ion-text
+          >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient NOT including PhilHealth rate.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
@@ -390,7 +390,7 @@ ______                         ______   _   _   _____   _____
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Please note that actual receivable amount may vary after final computations from accounting.</ion-text
+          >Please note that actual receivable amount may vary after final computations from Accounting.</ion-text
         >
       </li>
     </ul>
@@ -398,17 +398,17 @@ ______                         ______   _   _   _____   _____
     <ul *ngIf="!txtPersonalPhilHealthPF && !txtPersonalPhilHealthVAT">
       <li class="lineheight-80">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Total amount of P<b>{{PersonalPhilhealthPF | number}}</b> will be collected from your patient NOT including PhilHealth rate.</ion-text
+          >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> will be collected from your patient NOT including PhilHealth rate.</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Receivables: ~P<b>{{PersonalPhilhealthPF | number}}</b> + PhilHealth</ion-text
+          >Receivables: ~<b>&#8369;{{PersonalPhilhealthPF | number}}</b> + PhilHealth</ion-text
         >
       </li>
       <li class="lineheight-80 paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger"
-          >Please note that actual receivable amount may vary after final computations from accounting. 
+          >Please note that actual receivable amount may vary after final computations from Accounting. 
         </ion-text>
       </li>
     </ul>
@@ -710,7 +710,7 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Only the excess amount of P<b>{{InsurancePF | number}}</b> (+ VAT) - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
+        >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> (+ VAT) - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -720,7 +720,7 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Please note that actual receivable amount may vary after final computations from accounting.</ion-text
+        >Please note that actual receivable amount may vary after final computations from Accounting.</ion-text
       >
     </li>
   </ul>
@@ -733,7 +733,7 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Only the excess amount of P<b>{{InsurancePF | number}}</b> - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
+        >Only the excess amount of <b>&#8369;{{InsurancePF | number}}</b> - (PhilHealth + Insurance coverage) will be collected from your patient.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -743,7 +743,7 @@ ______          _    _
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Please note that actual receivable amount may vary after final computations from accounting.
+        >Please note that actual receivable amount may vary after final computations from Accounting.
       </ion-text>
     </li>
   </ul>
@@ -982,17 +982,17 @@ ______                         ______   _   _   _____   _____
   <ul *ngIf="!txtPersonalPhilHealthPF && txtPersonalPhilHealthVAT">
     <li class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Total amount of P<b>{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient NOT including PhilHealth rate.</ion-text
+        >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) will be collected from your patient NOT including PhilHealth rate.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Receivables: ~P<b>{{PersonalPhilhealthPF | number}}</b> (+ VAT) + PhilHealth</ion-text
+        >Receivables: ~<b>&#8369;{{PersonalPhilhealthPF | number}}</b> (+ VAT) + PhilHealth</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Please note that actual receivable amount may vary after final computations from accounting.</ion-text
+        >Please note that actual receivable amount may vary after final computations from Accounting.</ion-text
       >
     </li>
   </ul>
@@ -1000,7 +1000,7 @@ ______                         ______   _   _   _____   _____
   <ul *ngIf="!txtPersonalPhilHealthPF && !txtPersonalPhilHealthVAT">
     <li class="lineheight-80">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Total amount of P<b>{{PersonalPhilhealthPF | number}}</b> will be collected from your patient NOT including PhilHealth rate.</ion-text
+        >Total amount of <b>&#8369;{{PersonalPhilhealthPF | number}}</b> will be collected from your patient NOT including PhilHealth rate.</ion-text
       >
     </li>
     <li class="lineheight-80 paddingtop-10">
@@ -1010,7 +1010,7 @@ ______                         ______   _   _   _____   _____
     </li>
     <li class="lineheight-80 paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger"
-        >Please note that actual receivable amount may vary after final computations from accounting. 
+        >Please note that actual receivable amount may vary after final computations from Accounting. 
       </ion-text>
     </li>
   </ul>
