--- a/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
+++ b/src/app/pages/in-patient-patient-information/chh-app-professional-fee/chh-app-professional-fee.page.html
@@ -200,7 +200,7 @@ ______             _     _                        _   _                   _
       </li>
       <li class="lineheight-80  paddingtop-10">
         <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after
-          final computations from accounting.</ion-text>
+          final computations from Accounting.</ion-text>
       </li>
     </ul>
   
@@ -220,7 +220,7 @@ ______             _     _                        _   _                   _
         </ion-text>
       </li>
       <li class="lineheight-80  paddingtop-10">
-        <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations from accounting.  </ion-text>
+        <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations from Accounting.  </ion-text>
       </li>
     </ul>
   
@@ -612,7 +612,7 @@ ______             _     _                       ______             _
             </li>
             <li class="lineheight-80  paddingtop-10">
               <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after
-                final computations from accounting.</ion-text>
+                final computations from Accounting.</ion-text>
             </li>
           </ul>
         
@@ -632,7 +632,7 @@ ______             _     _                       ______             _
               </ion-text>
             </li>
             <li class="lineheight-80  paddingtop-10">
-              <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations from accounting.  </ion-text>
+              <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations from Accounting.  </ion-text>
             </li>
           </ul>
         
