--- a/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
+++ b/src/app/pages/in-patient-patient-information/transaction-summary/transaction-summary.page.html
@@ -149,7 +149,7 @@
     </li>
     <li class="lineheight-80  paddingtop-10">
       <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after
-        final computations from accounting.</ion-text>
+        final computations from Accounting.</ion-text>
     </li>
   </ul>
 
@@ -169,7 +169,7 @@
       </ion-text>
     </li>
     <li class="lineheight-80  paddingtop-10">
-      <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations from accounting.  </ion-text>
+      <ion-text class="fs-12 ion-text-wrap" color="danger">Please note that actual receivable amount may vary after final computations from Accounting.  </ion-text>
     </li>
   </ul>
 
