--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -75,26 +75,7 @@
                   <b>Expiry</b>
                 </ion-item>
               <!-- ADMITTED -->
-  <ion-item lines="none">
-    <ion-label class="ion-no-margin">
-      <ion-item class="ion-no-padding ion-no-margin">
-        <label class="ion-text-left">PRC License Expiry</label>
-        <label slot="end" class="ion-no-margin ion-text-right">
-            08/02/2023<br /> 
-            <span style="font-size:12px"  class="ion-text-right">400 Days Left</span>
-        </label>
-      </ion-item>
-      <ion-progress-bar
-      value=".25"
-      buffer="1"
-      color="warning"
-    ></ion-progress-bar>
 
-
-    
-
-    </ion-label>
-  </ion-item>
             
 
               <!-- ADMITTED -->
@@ -103,8 +84,8 @@
                   <ion-item class="ion-no-padding ion-no-margin">
                     <label class="ion-text-left">PRC License Expiry</label>
                     <label slot="end" class="ion-no-margin ion-text-right">
-                        08/02/2023<br /> 
-                        <span style="font-size:12px"  class="ion-text-right">30 Days Left</span>
+                        {{prc}}<br /> 
+                        <span style="font-size:12px"  class="ion-text-right">{{prcDays}} Days Left</span>
                     </label>
                   </ion-item>
                   <ion-progress-bar
@@ -119,7 +100,28 @@
                 </ion-label>
               </ion-item>
                         
-            
+                <!-- ADMITTED -->
+                <ion-item lines="none">
+                  <ion-label class="ion-no-margin">
+                    <ion-item class="ion-no-padding ion-no-margin">
+                      <label class="ion-text-left">PHIC Accreditation  Expiry</label>
+                      <label slot="end" class="ion-no-margin ion-text-right">
+                          {{phic}}<br /> 
+                          <span style="font-size:12px"  class="ion-text-right">{{phicDays}} Days Left</span>
+                      </label>
+                    </ion-item>
+                    <ion-progress-bar
+                    value=".75"
+                    buffer="1"
+                    color="warning"
+                  ></ion-progress-bar>
+              
+              
+                  
+              
+                  </ion-label>
+                </ion-item>
+                                    
 
 
                 <ion-item>
